// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline group"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  style="opacity: 1; transform: none;"
  tabindex="0"
  target="_blank"
>
  <div
    class="relative w-full grid grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 px-4 py-4 rounded-3xl overflow-hidden border border-white/10 dark:border-white/[0.14] backdrop-blur-xl bg-gradient-to-br from-white/[0.08] via-white/[0.04] to-white/[0.02] dark:from-white/[0.06] dark:via-white/[0.03] dark:to-white/[0.01] shadow-[0_8px_32px_rgba(0,0,0,0.12)] dark:shadow-[0_8px_32px_rgba(0,0,0,0.3)] transition-all duration-300 hover:shadow-[0_12px_40px_rgba(0,0,0,0.16)] dark:hover:shadow-[0_12px_40px_rgba(0,0,0,0.4)]"
  >
    <div
      class="relative w-14 h-14 rounded-2xl overflow-hidden shadow-[0_8px_20px_rgba(0,0,0,0.25)] dark:shadow-[0_8px_20px_rgba(0,0,0,0.45)]"
    >
      <img
        alt="Album"
        class="w-full h-full object-cover rounded-2xl transform scale-[1.012] transition-transform duration-700 ease-out group-hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-2"
    >
      <h3
        class="text-base font-extrabold leading-tight tracking-tight text-white dark:text-white line-clamp-1"
      >
        Test Track
      </h3>
      <p
        class="text-sm opacity-90 text-white dark:text-white/90 line-clamp-1"
      >
        Tester
      </p>
      <span
        class="self-start px-3 py-1 text-xs font-bold uppercase rounded-full bg-white/20 dark:bg-white/10 text-white dark:text-white/90 backdrop-blur-sm"
      >
        Paused
      </span>
      <div
        class="flex items-center gap-2 w-full"
      >
        <div
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="flex-1 h-1.5 bg-white/20 dark:bg-white/10 rounded-full overflow-hidden"
          role="progressbar"
        >
          <div
            class="h-full bg-gradient-to-r from-green-400 to-green-300 dark:from-green-500 dark:to-green-400 rounded-full transition-all duration-200"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="text-xs text-white/70 dark:text-white/60 whitespace-nowrap tabular-nums"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline group"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  style="opacity: 1; transform: none;"
  tabindex="0"
  target="_blank"
>
  <div
    class="relative w-full grid grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 px-4 py-4 rounded-3xl overflow-hidden border border-white/10 dark:border-white/[0.14] backdrop-blur-xl bg-gradient-to-br from-white/[0.08] via-white/[0.04] to-white/[0.02] dark:from-white/[0.06] dark:via-white/[0.03] dark:to-white/[0.01] shadow-[0_8px_32px_rgba(0,0,0,0.12)] dark:shadow-[0_8px_32px_rgba(0,0,0,0.3)] transition-all duration-300 hover:shadow-[0_12px_40px_rgba(0,0,0,0.16)] dark:hover:shadow-[0_12px_40px_rgba(0,0,0,0.4)]"
  >
    <div
      class="relative w-14 h-14 rounded-2xl overflow-hidden shadow-[0_8px_20px_rgba(0,0,0,0.25)] dark:shadow-[0_8px_20px_rgba(0,0,0,0.45)]"
    >
      <img
        alt="Album"
        class="w-full h-full object-cover rounded-2xl transform scale-[1.012] transition-transform duration-700 ease-out group-hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-2"
    >
      <h3
        class="text-base font-extrabold leading-tight tracking-tight text-white dark:text-white line-clamp-1"
      >
        Test Track
      </h3>
      <p
        class="text-sm opacity-90 text-white dark:text-white/90 line-clamp-1"
      >
        Tester
      </p>
      <div
        class="flex items-center gap-2 w-full"
      >
        <div
          aria-label="Track progress"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="17"
          class="flex-1 h-1.5 bg-white/20 dark:bg-white/10 rounded-full overflow-hidden"
          role="progressbar"
        >
          <div
            class="h-full bg-gradient-to-r from-green-400 to-green-300 dark:from-green-500 dark:to-green-400 rounded-full transition-all duration-200"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="text-xs text-white/70 dark:text-white/60 whitespace-nowrap tabular-nums"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;
